--- a/code/style.css
+++ b/code/style.css
@@ -6,98 +6,122 @@ html {
 
 .top-heading-parent{
   background-color:#F7F6DC;
-  padding: 20px;
+  border: 3px solid #FFC090;
+  padding: 10px;
   display: flex;
-  margin-bottom: 10px;
+  flex-direction: row;
+  justify-content: space-evenly;  
+  align-items: center;
+  margin: 10px;
 }
+
 header img {
-  width: 20%;
+  width: 200px;
+  height: 200px;
 }
-.logo-name.child{
-  font-size: 48px;
+
+.logo-name-child{
+  font-size: 52px;
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  text-align: right;
-
 }
+
 .navigation {
-  font-size:15px;
+  font-size:20px;
   font-family: 'Courier New', Courier, monospace;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: left;
 }
 
-section.big-news {
+.big-news-parent {
   background-color: #7FB77E;
   padding: 5px;
-  height: 350px;
+  margin: 10px;
+  border: 3px solid #FFC090;
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-  border: 1px solid;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
-.big-news img {
+.big-news img{
   margin: 3px;
   width: 300px;
   height: 250px;
-  border: 1px solid #F7F6DC;
+  border: 2px solid #F7F6DC;
   flex-direction: column;
+  align-items: center;
 } 
-.big-news-text{
-  text-align: center;
-}
 
-.big-news h1 {
+.big-news h1{
   margin: 3px;
   padding: 5px;
-  font-size: 36px;
+  font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
   border: 1px solid #F7F6DC;
-  flex-direction: column;
-  text-align: center;
-}
-  .big-news h2{
-    margin: 3px;
-    padding: 5px;
-    border: 1px solid #F7F6DC;
-    font-size: 20px;
-    flex-direction: column;
+  flex-direction: center;
+  align-items: center;
 }
 
-@media (min-width: 667px) and (max-width: 1024px){
-  .big-news{
+ .big-news h2 {
+    margin: 3px;
+    padding: 2px;
+    border: 1px solid #F7F6DC;
+    font-size: 15px;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  .big-news img {
+    width: 300px;
+    height: 250px;
     flex-direction: row;
-    font-size: 40px;
+  }
+}
+@media (min-width: 1025px) {
+  .big-news img {
+    width: 300px;
+    height: 250px;
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  .big-news h1 {
+    font-size: 30px;
   }
 }
 
 @media (min-width: 1025px) {
-  .big-news{
-    flex-direction: row;
-    font-size: 46px;
+    .big-news h1 {
+      font-size: 40px;
+    }
   }
-}
 
 section.small-news{
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 150px;
-  gap: 5px;
-  padding: 30px;
+  grid-template-rows: 100px;
+  border: 3px solid #FFC090;
   text-align: center;
+  align-items: center;
   justify-content: center;
 }
 .grid-item{
   background-color: #F7F6DC;
+  border: 2px solid #FFC090;
+  width: 100 px;
+  height: 100px;
+  padding: 10px;
 }
 
 @media (min-width: 667px) and (max-width: 1024px){
   section.small-news {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 200px;
-    gap: 10px;
+    grid-template-rows: 100px;
+    row-gap: 10px;
   }
 }
 
@@ -105,5 +129,6 @@ section.small-news{
   section.small-news{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 100px;
+    row-gap: 10px;
 }
 }
