--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
   margin: 0%;
   padding-left: 5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media (max-width: 667px)  {
