--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,5 @@
 
+*,
 body {
   margin: 0; 
   box-sizing: border-box;
@@ -10,6 +11,7 @@ body {
 
 
 header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -156,9 +158,104 @@ p {
   opacity: 70%;
 }
 
+
+ /** CONTACT **/
+
+ .contact {
+  min-width: max-content;
+  margin: 20px 0;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-info {
+  padding: 10px;
+  text-align: left;
+}
+
+.send-form {
+  display: flex;
+  padding: 10px;
+  text-align: left;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.contact-head, .about-head {
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-size: 1.5rem
+}
+
+.contact-p, .about-p, .history {
+  text-transform: none;
+}
+
+.contact-way {
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.contact-label {
+  opacity: 1;
+  font-size: 1rem;
+  color: black;
+  font-weight: 600;
+}
+
+textarea {
+  max-width: 400px;
+}
+
+.send-btn {
+  width: 50px
+}
+
+  /** ABOUT **/
+
+  .about-container {
+    display: flex;
+    padding: 10px;
+    text-align: left;
+    flex-direction: column;
+    line-height: 2;
+    margin: 20px;
+    max-width: 500px;
+  }
+
+  .about-image {
+    width: 40vw;
+    height: auto;
+  }
+
+  /** INSPIRATION **/
+
+  .inspiration-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    margin: 20px;
+  }
+
+
+  .inspo-image {
+    object-fit: cover;
+    height: auto;
+    width: 40vw;
+    border: 2px solid black;
+  }
+
+  .inspo-image:hover {
+    opacity: 0.8;
+  }
+
   /** Footer **/
 
 footer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -271,6 +368,21 @@ footer {
     font-size: 11px;
   }
   
+
+   /** INSPIRATOIN **/
+
+   .inspiration-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 40px;
+  }
+
+  .inspo-image {
+    object-fit: cover;
+    height: auto;
+    width: 40vw
+  }
 
 }
 
@@ -402,6 +514,25 @@ footer {
     font-size: 13px;
   }
   
+  /** ABOUT & CONTACT **/
+
+  .about-container, .contact {
+    position: absolute;
+    left: 20%;
+  }
+ 
+
+  /** INSPIRATION **/
+
+  .inspiration-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 40px;
+  }
+
+  .inspo-image {
+    width: 20vw
+  }
 
 }
 
