--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,320 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  font-size: 100%;
+  box-sizing: border-box;
 }
+
+.site-logo {
+  margin-left: 5px;
+  color: white;
+  font-family: Verdana;
+  font-size: 1.5rem;
+}
+
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  font-family: Tahoma;
+}
+
+.small-text {
+  color: black;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+h2 {
+  vertical-align: center;
+  text-align: center;
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+* {
+  font-family: Verdana;
+  box-sizing: border-box;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: black;
+  background: black;
+  color: #FFF;
+  height: 50px;
+  padding: 1em;
+}
+
+.menu {
+  color: white;
+  font-family: Verdana;
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  align-items: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+@media (max-width: 700px) {
+  .menu-button-container {
+    display: flex;
+    align-items: flex-end;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #222;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #444;
+  }
+}
+
+h2 {
+  color: black;
+  font-family: Verdana;
+  text-align: center;
+  margin-top: 35px;
+}
+
+main {
+  padding: 1rem;
+  display: block;
+}
+
+.intro {
+  max-width: 640px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 2rem;
+}
+
+article p {
+  display: block;
+  color: black;
+  font-family: Verdana;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+/* Big News Section*/
+.big-news {
+  background-color:Gainsboro;
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 1.5rem;
+  padding: 1rem 1rem;
+  grid-template-columns: 3fr 2fr;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.big-news-picture img {
+  width: 100%;
+}
+
+.big-news-text {
+  color: black;
+  font-family: Verdana;
+}
+
+/* Read more-Button */
+.read-more {
+  padding: 10px 25px;
+  margin-top: 20px;
+  font-family: Verdana;
+  font-weight: 500;
+  background: transparent;
+  outline: none !important;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  border: 2px solid rgb(255, 255, 255);
+  z-index: 1;
+  color: black;
+  font-family: Verdana;
+}
+
+.read-more:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  direction: rtl;
+  z-index: -1;
+  background: rgb(255, 255, 255);
+  transition: all 0.3s ease;
+}
+
+.read-more:hover {
+  color: rgb(0, 0, 0);
+}
+
+.read-more:hover:after {
+  left: auto;
+  right: 0;
+  width: 100%;
+}
+
+.read-more:active {
+  top: 2px;
+}
+
+/* Small News Section*/
+.small-news {
+  background-color: rgb(240, 240, 240);
+  color: black;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  text-align: center;
+  grid-gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.small-picture img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 16rem;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.small-text {
+  font-size: 1rem;
+  font-family: Verdana;
+}
+
+div {
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
+
+footer {
+  display: flex;
+  text-align: center;
+  background-color: black;
+  font-family: Verdana;
+  color: white;
+}
+
+.made-by {
+  display: flex;
+  align-items: flex-end;
+  -moz-column-gap: 0.5rem;
+  column-gap: 0.5rem;
+}
+
+.made-by a {
+  color: white;
+  font-family: Verdana;
+  text-decoration: underline;
+}
+
+
+* {
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+
+@media (min-width: 1025px) {
+  footer {
+    padding: 2rem 6rem;
+    font-size: 1rem;
+  }}
