--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,11 @@
 html {
   background: white;
-  color:blue;
+  color:black;
 }
 
 *{
   box-sizing: border-box;
+  font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
 h1 {
@@ -14,37 +15,61 @@ h1 {
 
 
 
-.main-heading{
+.one {
   color:black;
-  font-size: 100px;
-  text-align: center;
+  font-size: 80px;
+  justify-self:end;
+  
+}
+
+.two {
+  color:black;
+  font-size: 80px;
+  justify-self:baseline;
+}
+
+.logo-container{
+  display:grid;
+  grid-template-columns: 1fr 150px 1fr;
+  object-fit: cover;
+  align-items: center;
+  justify-items: center;
+  margin-top: 30px;
+}
+
+.logo {
+  width: 80px;
+  height:80px;
+  
 }
 
 .nav-container{
   text-align: center;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 20px;
+  background-color: black;
+  
   
 }
 
 li{
   display:inline;
   margin:10px;
-  padding: 50px;
+  padding: 100px;
   font-size: 30px;
-  color: blue;
+  color: white;
 }
 
 .big-news-box{
   display:grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 70px;
+  margin: 50px 100px;
   align-items: center;
   justify-items: center;
   background-color: black;
   height: 800px;
-  background-image: url("https://images.unsplash.com/photo-1576086213369-97a306d36557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80");
+  background-image: url("https://images.unsplash.com/photo-1567607703202-0bf728b59e09?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80");
   background-size:cover;
   object-fit: cover;
   background-position:center; /* Center the image */
@@ -61,20 +86,15 @@ li{
   
   
 
-
-/* .big-news-image{
-  
-  width:800px;
-  
-} */
-
-
-
 .news-grid {
   display:grid;
   grid-template-columns: repeat(4, 1fr);
-  margin: 50px 50px 50px 50px;
+  margin: 70px;
+  align-items: center;
   justify-items: center;
+  word-wrap: break-word;
+  word-wrap: break-all;
+  
    
 }
 
@@ -83,10 +103,22 @@ li{
   width: 500px;
   height: 500px;
   object-fit: cover;
+  /* justify-items: auto; */
 }
 
 .news-item-caption{
-  font-size: 30px;
+  font-size: 22px;
+  
+  
+}
+
+.footer{
+  background-color: black;
+  color: white;
+  padding: 20px;
+  margin: 0px;
+  font-size: 20px;
+  align-content:flex-start;
 }
 
 
@@ -101,6 +133,6 @@ li{
 /*desktop*/
 @media (min-width: 1025px) {
   .main-heading {
-    color: yellow;
+    color: black;
   }
 }               
