--- a/code/style.css
+++ b/code/style.css
@@ -11,21 +11,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 25px;
+  font-size: 23px;
   margin: 20px 35px 20px 35px
 }
 
 .logo {
-  width: 250px;
+  width: 300px;
   height: auto;
 }
 
-.site-logo {
-  color: black;
-}
-
 .nav-link {
-  list-style: none;
+  list-style-type: none;
 }
 
 .nav-link .nav-list {
@@ -33,13 +29,13 @@ body {
   padding: 20px 10px;
 }
 
-.nav bar a  {
-  color: green;
+.nav-bar a  {
+  color: black;
   text-decoration: none;
 }
 
-.nav bar a:hover {
-  color: blue;
+.nav-bar a:hover {
+  color: coral;
 }
 
 .menu {
@@ -56,7 +52,7 @@ body {
 .headline {
   display: flex;
   border: 1 px solid white;
-  box-shadow: 5px 5px 16px saddlebrown;
+  box-shadow: 0px 0px 0px 12px coral;
   background-color: white;
   max-width: 100%;
 }
@@ -150,6 +146,7 @@ body {
 
 .news-grid h1 {
   text-align: center;
+  font-size: 20px;
 }
 
 .news-grid a {
@@ -170,7 +167,8 @@ body {
 }
 
 .grid-image img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -201,12 +199,24 @@ body {
 
 .main-footer {
   text-align: center;
-  background: gainsboro;
+  background: coral;
   margin-top: 5%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   color: black;
-  font-size: 15px;
+  font-size: 10px;
+}
+
+.main-footer a {
+  color: white;
+}
+
+.main-footer a:link {
+  text-decoration: none;
+}
+
+.main-footer a:hover {
+  color: black;
 }
 
 /*Tablet Size*/
